# internet_shop_frontend123

./: pyproject.toml
internet_shop_frontend/: main.py
internet_shop_frontend/src/data/: data_actions.py  forms.py
internet_shop_frontend/src/templates/: _base.html  _navigation.html  cabinet.html  index.html  login.html  product.html  signup.html
